--- a/main.css
+++ b/main.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
 }
