Worked on homepage

--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+a {
+  @apply text-navy underline;
+}
+
 .animate-entrance {
   animation: fadeInSlideUp 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
 }
