Made fetch work

--- a/main.css
+++ b/main.css
@@ -15,6 +15,9 @@ body {
 a {
   @apply text-navy underline;
 }
+table a {
+  @apply text-white underline;
+}
 
 .animate-entrance {
   animation: fadeInSlideUp 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
